# openglecs

./: .gitignore  LearningOpenGL.sln  LearningOpenGL.vcxproj  LearningOpenGL.vcxproj.filters
LearningOpenGL/: CMakeLists.txt  CMakePresets.json  CppProperties.json
LearningOpenGL/libs/GLAD/include/glad/: glad.h
LearningOpenGL/libs/GLAD/src/: glad.c
LearningOpenGL/libs/GLFW/: desktop.ini
LearningOpenGL/libs/lib-vc2022/: desktop.ini
LearningOpenGL/resources/: alarm_clock_01_4k.mbf
LearningOpenGL/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Entity.h  ModelManager.h  Rectangle.cpp  RenderSystem.h  Scene.h  SceneManager.h  Shader.cpp  Shader.h  TextureManager.cpp  TextureManager.h  TexturedModelComponent.h  TransformComponent.h  TransformManager.h  Triangle.cpp  main.cpp
LearningOpenGL/src/shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  Application.h  Camera.h  Cube.cpp  Cube.h  Rectangle.cpp  Rectangle.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TextureManager.h  Triangle.cpp  Triangle.h
src/shaders/: fragment.glsl  vertex.glsl
